# photobooth

./: .gitignore  CLAUDE.md  PIBOOTH_ANALYSIS.md  README.md  config.defaults.toml  config.toml  pyproject.toml  todo.md
.claude/commands/: down.md  plan.md  test.md  todo.md  up.md  work.md
app/: __init__.py  config.py  dependencies.py  main.py
app/camera/: __init__.py  base.py  factory.py  gphoto2.py  hybrid.py  picamera2.py  webcam.py
app/hardware/: __init__.py  factory.py  gpio.py  printer.py
app/models/: config_schema.py  schemas.py  state.py
app/plugins/: __init__.py  hookspec.py
app/processing/: __init__.py  chromakey.py  effects.py  gif.py  layout.py  pipeline.py  templates.py
app/routers/: admin.py  api.py  booth.py  camera.py  gallery.py  printer.py  share.py
app/services/: admin_auth.py  cloud_gallery.py  config_service.py  counter_service.py  email_service.py  plugin_manager.py  share_service.py  state_machine.py  tunnel_service.py  watchdog.py
data/: gallery.db
deploy/: photobooth-kiosk.desktop  photobooth-kiosk.service  photobooth.service  setup.sh
docs/: CONFIGURATION.md  DEPLOYMENT.md  MIGRATION.md  PLUGINS.md  TEMPLATES.md
tests/: __init__.py  test_admin.py  test_booth_ws.py  test_builtin_plugins.py  test_camera.py  test_camera_endpoint.py  test_camera_framing.py  test_chromakey.py  test_config.py  test_config_import.py  test_counter_service.py  test_gallery_thumbnail.py  test_gif.py  test_hardware.py  test_main.py  test_plugins.py  test_processing.py  test_resilience.py  test_sharing.py  test_state_machine.py  test_tunnel.py
(+41 files in other folders)
